Fix modal squishing regression by removing dynamic padding-bottom

--- a/src/Modal.css
+++ b/src/Modal.css
@@ -54,7 +54,6 @@
   background-color: var(--modal-background-color);
   display: flex;
   flex-direction: column;
-  padding-bottom: var(--modal-offset, 0px);
   overflow: hidden;
   overscroll-behavior: contain;
 }
